# voice-ai-agent

./: .gitignore  app.py  demo.py  pyproject.toml  test.html  test.py
.trunk/: trunk.yaml
config/: load_config.py
input_audios/: output.raw
prompts/: loan_repayment_prompt.txt  system_prompt.txt
tests/: test_api_endpoints.py  test_audio_processing.py  test_cal_data.py  test_config.py  test_integration.py  test_tool_execution.py  test_websocket.py
utils/: audio_stream_processor.py  date_formatter.py  generate_call_summary.py  load_prompt.py  logger.py  rewrite_call_record.py  transcribe_call_record.py  twilio_transcriber.py  validate_config.py
voice_test_agent/: backup_demo.py  config.py  main.py  prompts.py  test.py  twilio_call_agent.py  twilio_test_call_agent.py
voice_test_agent/replit-code/: config.py  main.py
voice_test_agent/replit-code/utils/: audio_processing.py  llm.py  tts.py
